adapted board javafx